Builds/build_1/CactusLang/Cactus/gen/GrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /mnt/warehouse/BME/sem6/onlab/cactus_project/Builds/build_1/CactusLang/Cactus/Grammar.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class GrammarParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		KYW_INCLUDE=1, KYW_STRUCT=2, KYW_CLASS=3, KYW_IMPLEMENTS=4, KYW_TRUE=5, 
		KYW_FALSE=6, KYW_NULL=7, KYW_IF=8, KYW_ELSE=9, KYW_FOR=10, KYW_WHILE=11, 
		KYW_RETURN=12, KYW_BREAK=13, KYW_CONTINUE=14, KYW_FREE=15, KYW_ALLOC=16, 
		TAG_PRFX=17, UNOP_INC=18, UNOP_DCR=19, LUNOP_L_NOT=20, LUNOP_B_NOT=21, 
		LUNOP_SIZEOF=22, OP_ASG=23, OP_STAR=24, OP_DIV=25, OP_REM=26, OP_ADD=27, 
		OP_SUB=28, OP_AND=29, OP_B_OR=30, OP_B_XOR=31, OP_LSH=32, OP_RSH=33, OP_EQL=34, 
		OP_L_AND=35, OP_L_OR=36, OP_NEQ=37, OP_LST=38, OP_GRT=39, OP_LSEQ=40, 
		OP_GREQ=41, OP_LAMDA=42, OP_ACC=43, OP_REF=44, COMMA=45, BODY_OPN=46, 
		BODY_CLS=47, PARN_OPN=48, PARN_CLS=49, SQPN_OPN=50, SQPN_CLS=51, PPC_C_BODY_OPN=52, 
		PPC_C_BODY_CLS=53, PPC_C_CODE=54, PPC_C_LAMDA=55, S_QT=56, D_QT=57, EOS=58, 
		SIGN=59, INT_STR=60, HEX_STR=61, OCT_STR=62, BIN_STR=63, CHAR=64, STRING=65, 
		TAG=66, ID=67, PPC_ID=68, PPC_DEEP_ID=69, COMMENT=70, LINE_COMMENT=71, 
		WHITESPACE=72, NEWLINE=73;
	public const int
		RULE_codefile = 0, RULE_eoc = 1, RULE_tags = 2, RULE_globStatement = 3, 
		RULE_preprocessor_stm = 4, RULE_filepath = 5, RULE_ppc__Include = 6, RULE_ptrLvl = 7, 
		RULE_type = 8, RULE_func_dcl_header = 9, RULE_func_dcl = 10, RULE_func_lamd_body = 11, 
		RULE_returnType = 12, RULE_param = 13, RULE_funcName = 14, RULE_varName = 15, 
		RULE_field_dcl = 16, RULE_struct_name = 17, RULE_struct_dcl = 18, RULE_struct_body = 19, 
		RULE_class_name = 20, RULE_class_dcl = 21, RULE_parent_class = 22, RULE_interface = 23, 
		RULE_interfaces = 24, RULE_class_body = 25, RULE_codeBody = 26, RULE_statement = 27, 
		RULE_varDcl = 28, RULE_expression = 29, RULE_op_MultLvl = 30, RULE_op_AddLvl = 31, 
		RULE_op_BitLvl = 32, RULE_op_CompLvl = 33, RULE_primaryExp = 34, RULE_op_lUn = 35, 
		RULE_op_rUn = 36, RULE_primaryExpVal = 37, RULE_parenthsExp = 38, RULE_miscPrimeExp = 39, 
		RULE_alloc = 40, RULE_free = 41, RULE_explicitCast = 42, RULE_assignment = 43, 
		RULE_funcCall = 44, RULE_funcParamVals = 45, RULE_funcRef = 46, RULE_literalExp = 47, 
		RULE_nullLiteral = 48, RULE_numLiteral = 49, RULE_intLiteral = 50, RULE_intDecLiteral = 51, 
		RULE_intHexLiteral = 52, RULE_intBinLiteral = 53, RULE_intOctLiteral = 54, 
		RULE_floatLiteral = 55, RULE_strLiteral = 56, RULE_charLiteral = 57, RULE_boolLiteral = 58, 
		RULE_varRef = 59, RULE_ifStatement = 60, RULE_elseStatement = 61, RULE_returnStatement = 62, 
		RULE_continueStatement = 63, RULE_breakStatement = 64, RULE_loopDecl = 65, 
		RULE_loopCond = 66, RULE_endExp = 67, RULE_forLoop = 68, RULE_whileLoop = 69, 
		RULE_ppc__C_Code_Body = 70, RULE_ppc__C_id = 71, RULE_ppc__C_Func = 72, 
		RULE_ppc__C_Func_Map = 73, RULE_ppc__varRef = 74, RULE_ppc__funcRef = 75, 
		RULE_ppc__funcCall = 76, RULE_ppc__Token = 77;
	public static readonly string[] ruleNames = {
		"codefile", "eoc", "tags", "globStatement", "preprocessor_stm", "filepath", 
		"ppc__Include", "ptrLvl", "type", "func_dcl_header", "func_dcl", "func_lamd_body", 
		"returnType", "param", "funcName", "varName", "field_dcl", "struct_name", 
		"struct_dcl", "struct_body", "class_name", "class_dcl", "parent_class", 
		"interface", "interfaces", "class_body", "codeBody", "statement", "varDcl", 
		"expression", "op_MultLvl", "op_AddLvl", "op_BitLvl", "op_CompLvl", "primaryExp", 
		"op_lUn", "op_rUn", "primaryExpVal", "parenthsExp", "miscPrimeExp", "alloc", 
		"free", "explicitCast", "assignment", "funcCall", "funcParamVals", "funcRef", 
		"literalExp", "nullLiteral", "numLiteral", "intLiteral", "intDecLiteral", 
		"intHexLiteral", "intBinLiteral", "intOctLiteral", "floatLiteral", "strLiteral", 
		"charLiteral", "boolLiteral", "varRef", "ifStatement", "elseStatement", 
		"returnStatement", "continueStatement", "breakStatement", "loopDecl", 
		"loopCond", "endExp", "forLoop", "whileLoop", "ppc__C_Code_Body", "ppc__C_id", 
		"ppc__C_Func", "ppc__C_Func_Map", "ppc__varRef", "ppc__funcRef", "ppc__funcCall", 
		"ppc__Token"
	};

	private static readonly string[] _LiteralNames = {
		null, "'include'", "'struct'", "'class'", "'implements'", "'true'", "'false'", 
		"'nullptr'", "'if'", "'else'", "'for'", "'while'", "'return'", "'break'", 
		"'continue'", "'free'", "'alloc'", "'@'", "'++'", "'--'", "'!'", "'~'", 
		"'sizeof'", "'='", "'*'", null, "'%'", "'+'", "'-'", "'&'", "'|'", "'^'", 
		"'<<'", "'>>'", "'=='", "'&&'", "'||'", "'!='", "'<'", "'>'", "'<='", 
		"'>='", "'=>'", "':'", "'.'", "','", "'{'", "'}'", "'('", "')'", "'['", 
		"']'", null, null, null, null, "'''", "'\"'", "';'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "KYW_INCLUDE", "KYW_STRUCT", "KYW_CLASS", "KYW_IMPLEMENTS", "KYW_TRUE", 
		"KYW_FALSE", "KYW_NULL", "KYW_IF", "KYW_ELSE", "KYW_FOR", "KYW_WHILE", 
		"KYW_RETURN", "KYW_BREAK", "KYW_CONTINUE", "KYW_FREE", "KYW_ALLOC", "TAG_PRFX", 
		"UNOP_INC", "UNOP_DCR", "LUNOP_L_NOT", "LUNOP_B_NOT", "LUNOP_SIZEOF", 
		"OP_ASG", "OP_STAR", "OP_DIV", "OP_REM", "OP_ADD", "OP_SUB", "OP_AND", 
		"OP_B_OR", "OP_B_XOR", "OP_LSH", "OP_RSH", "OP_EQL", "OP_L_AND", "OP_L_OR", 
		"OP_NEQ", "OP_LST", "OP_GRT", "OP_LSEQ", "OP_GREQ", "OP_LAMDA", "OP_ACC", 
		"OP_REF", "COMMA", "BODY_OPN", "BODY_CLS", "PARN_OPN", "PARN_CLS", "SQPN_OPN", 
		"SQPN_CLS", "PPC_C_BODY_OPN", "PPC_C_BODY_CLS", "PPC_C_CODE", "PPC_C_LAMDA", 
		"S_QT", "D_QT", "EOS", "SIGN", "INT_STR", "HEX_STR", "OCT_STR", "BIN_STR", 
		"CHAR", "STRING", "TAG", "ID", "PPC_ID", "PPC_DEEP_ID", "COMMENT", "LINE_COMMENT", 
		"WHITESPACE", "NEWLINE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Grammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static GrammarParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public GrammarParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GrammarParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class CodefileContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public EocContext eoc() {
			return GetRuleContext<EocContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GlobStatementContext[] globStatement() {
			return GetRuleContexts<GlobStatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public GlobStatementContext globStatement(int i) {
			return GetRuleContext<GlobStatementContext>(i);
		}
		public CodefileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_codefile; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterCodefile(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitCodefile(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCodefile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CodefileContext codefile() {
		CodefileContext _localctx = new CodefileContext(Context, State);
		EnterRule(_localctx, 0, RULE_codefile);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 159;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 14L) != 0) || _la==TAG || _la==ID) {
				{
				{
				State = 156;
				globStatement();
				}
				}
				State = 161;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 162;
			eoc();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EocContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(GrammarParser.Eof, 0); }
		public EocContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_eoc; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterEoc(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitEoc(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEoc(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EocContext eoc() {
		EocContext _localctx = new EocContext(Context, State);
		EnterRule(_localctx, 2, RULE_eoc);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 164;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TagsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] TAG() { return GetTokens(GrammarParser.TAG); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TAG(int i) {
			return GetToken(GrammarParser.TAG, i);
		}
		public TagsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tags; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterTags(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitTags(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTags(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TagsContext tags() {
		TagsContext _localctx = new TagsContext(Context, State);
		EnterRule(_localctx, 4, RULE_tags);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 167;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 166;
					Match(TAG);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 169;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GlobStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Preprocessor_stmContext preprocessor_stm() {
			return GetRuleContext<Preprocessor_stmContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TagsContext tags() {
			return GetRuleContext<TagsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EOS() { return GetToken(GrammarParser.EOS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Field_dclContext field_dcl() {
			return GetRuleContext<Field_dclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Func_dclContext func_dcl() {
			return GetRuleContext<Func_dclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Struct_dclContext struct_dcl() {
			return GetRuleContext<Struct_dclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Class_dclContext class_dcl() {
			return GetRuleContext<Class_dclContext>(0);
		}
		public GlobStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_globStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterGlobStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitGlobStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGlobStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GlobStatementContext globStatement() {
		GlobStatementContext _localctx = new GlobStatementContext(Context, State);
		EnterRule(_localctx, 6, RULE_globStatement);
		try {
			State = 181;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 171;
				preprocessor_stm();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 172;
				tags();
				State = 173;
				Match(EOS);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 175;
				field_dcl();
				State = 176;
				Match(EOS);
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 178;
				func_dcl();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 179;
				struct_dcl();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 180;
				class_dcl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Preprocessor_stmContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Ppc__IncludeContext ppc__Include() {
			return GetRuleContext<Ppc__IncludeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EOS() { return GetToken(GrammarParser.EOS, 0); }
		public Preprocessor_stmContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_preprocessor_stm; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterPreprocessor_stm(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitPreprocessor_stm(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreprocessor_stm(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Preprocessor_stmContext preprocessor_stm() {
		Preprocessor_stmContext _localctx = new Preprocessor_stmContext(Context, State);
		EnterRule(_localctx, 8, RULE_preprocessor_stm);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 183;
			ppc__Include();
			State = 184;
			Match(EOS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FilepathContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OP_LST() { return GetToken(GrammarParser.OP_LST, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ID() { return GetTokens(GrammarParser.ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID(int i) {
			return GetToken(GrammarParser.ID, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OP_GRT() { return GetToken(GrammarParser.OP_GRT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] OP_DIV() { return GetTokens(GrammarParser.OP_DIV); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OP_DIV(int i) {
			return GetToken(GrammarParser.OP_DIV, i);
		}
		public FilepathContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_filepath; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterFilepath(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitFilepath(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFilepath(this);
			else return visitor.VisitChildren(this);
		}
	}
